--- a/result_style.css
+++ b/result_style.css
@@ -4,29 +4,40 @@
     background-size: cover;
 }
 */
-*/
-.card{
-    background-image: url(original.jpeg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
+
+.top{
+    opacity: 0.75;
+    margin-bottom: 2rem;
 }
-*/
-/* ボーダーの太さ */
-.border-2{
-    border-width:2px !important;
+.result{
+    margin-bottom: 2rem !important;
+}
+.comment{
+    font-size: 0.75rem;
+    margin-bottom: 3rem;
+}
+.element{
+    margin-bottom: 2rem;
+}
+.item{
+    opacity: 0.8;
+    font-size: 1.5rem;
+}
+.thing{
+    margin-top: 2rem;
+    font-size: 1.25rem;
+}
+.set{
+    border-radius: 0px !important;
+    border-width: 5px !important;
+    border-color: red !important;
+    background-color: #FFFFEE !important;
 }
 
-.border-3{
-    border-width:3px !important;
-}
-
-.border-4{
-    border-width:4px !important;
-}
 
 .card-body{
     border-width:15px !important;
-    border-color: red;
+    border-color: red !important;
     padding: 0.25rem !important;
 }
+
