--- a/result_style.css
+++ b/result_style.css
@@ -4,7 +4,9 @@
     background-size: cover;
 }
 */
-
+.back{
+    background: linear-gradient(180deg, rgb(250, 240, 240), rgb(200, 100, 100) );
+}
 .top{
     opacity: 0.75;
     margin-bottom: 2rem;
